@startuml
'https://plantuml.com/class-diagram

abstract class MessageRequest{
    -private String from;
    -private String to;
    -private String body;

    +String getFrom()
    +String getTo()
    +String getBody()
}
class EmailMessageRequest{
}

interface EmailSender{
    +void send(MessageRequest request)
}

interface EmailFactory{
    +void send(MessageRequest request)
}
class GmailFactory{
    +void send(MessageRequest request)
}
class WallaFactory{
    +void send(MessageRequest request)
}
class YahooFactory{
    +void send(MessageRequest request)
}

class GmailSender{
    +void send(MessageRequest request)
}
class WallaSender{
    +void send(MessageRequest request)
}
class YahooSender{
    +void send(MessageRequest request)
}

MessageRequest <|-- EmailMessageRequest

EmailFactory <|-- EmailSender

EmailFactory <|.. GmailFactory
EmailFactory <|.. WallaFactory
EmailFactory <|.. YahooFactory


EmailSender <|.. GmailSender
EmailSender <|.. WallaSender
EmailSender <|.. YahooSender

EmailFactory <|-- MessageRequest







@enduml